--- a/membership.html
+++ b/membership.html
@@ -1,163 +1,81 @@
-<!doctype html>
-<!--Everything you write should be using markups -->
-<!-- head section is communicating about the page to the browser -->
-<!-- Anything you write under head is not displayed on the browser content page. -->
-<html xmlns="http://www.w3.org/1999/xhtml" xml:ng-app lang="en">
-	<!-- All the Tags should be under <html> -->
-	<!-- Describing about the page -->
-	<head>
-	    <!-- Required meta tags -->
-	    <!-- Describing about the page -->
-	    <!-- head section is communicating about the page to the browser -->
-	    <!-- Anything you write under head is not displayed on the browser content page. -->
-	    <meta charset="UTF-8">
+<!DOCTYPE html>
+<html ng-app lang="en">
+    <head profile="http://www.w3.org/2005/10/profile">
         <title>Turquoise membership page</title>
-
-		<!-- Viewport for responsive web design -->
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+               <meta charset=utf-8>
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
-        <meta property="og:title" content="A Basic HTML5 Template">
+	    <meta property="og:title" content="A Basic HTML5 Template">
         <meta property="og:type" content="website">
-        <meta property="og:description" content="A simple HTML5 Template for new projects.">
+        <meta property="og:audio:type" content="audio/mpeg">
+        <meta property="og:description" content="The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
         <meta property="og:image" content="image.png">
         <meta name="keywords" content="HTML5, Node.js, Jquery">
         <meta name="author" content="Orris Baker">
-        <!-- panel-spillter -->
-		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8" />
-        <link rel="stylesheet" href="./css-jq/sunny/jquery-ui-1.8.17.custom.css" type="text/css" media="screen" charset="utf-8" />
-        <link rel="stylesheet" href="./splitter.css" type="text/css" media="screen" charset="utf-8" />
-		<link rel="stylesheet" href="./lightbox.css" type="text/css" media="screen" charset="utf-8" />
-		<link rel="stylesheet" href="./css/sunny/jquery-ui-1.8.17.custom.css" type="text/css" media="screen" charset="utf-8">
-		<link rel="stylesheet" href="colorbox.css" type="text/css" media="screen" charset="utf-8"/>
-	
+	    <meta property="og:audio:type" content="audio/mpeg"> 
+        <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
+        <!-- Viewport for responsive web design -->
+	    <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
         <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="./jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="./scripts.js"></script>
-  
-        <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="./lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="script.js"></script>
-		
-		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
-		<!-- <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8"> -->
-        <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="./scripts.js"></script> 
+        <script type="text/javascript" src="./js/scripts.js"></script>
         <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
-		<link rel="stylesheet" href="./style.css"> 
+	    <link rel="stylesheet" href="./style.css"> 
         <link rel="stylesheet" href="./style[1].css"> 
         <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
-
-		<link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8"/>	
-        <link rel="stylesheet" href="jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8"/>	
-        <link rel="stylesheet" href="lightbox.css" type="text/css" media="screen" charset="utf-8"/>
-  
-        <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" ></script>
-        <script src="jquery.Jcrop.min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="script.js"></script>
-	   
-        <link rel="stylesheet" href="./nav[1].css">
-		<link rel="stylesheet" href="./navigation.css">
-		<link rel="stylesheet" href="./mainstyle.css">
-		
+	    <link rel="stylesheet" href="./nav[1].css">
         <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <link rel="stylesheet" href="./font-awesome.min[1].css">
-		<link rel="icon" type="image/png" href="./weed.jpg">
-		<link rel="icon" type="image/png" href="./flexy-logo.png">
-
-		
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta name="format-detection" content="telephone=no">
-
-        <meta property="og:title" content="A Basic HTML5 Template" />
-        <meta property="og:type" content="video.movie" />
-        <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
-        <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
-        <meta name="description" content="A simple HTML5 Template for new projects.">
-        <meta name="author" content="Orris A BakerJr">
-        <meta name="google-adsense-account" content="ca-pub-9639638377144073">
-        <meta property="og:title" content="A Basic HTML5 Template">
-        <meta property="og:type" content="website">
-        <meta property="og:url" content="https://www.sitepoint.com/a-basic-html5-template/">
-        <meta property="og:description" content="A simple HTML5 Template for new projects.">
-        <meta property="og:image" content="image.png">
-        <meta name="theme-color" content="#712cf9">
-        <meta name="keywords" content="HTML5, Node.js, Jquery">
-        <meta name="author" content="Ian Andolina">
-
-        <!-- Optional Metadata-->
-        <meta property="og:audio" content="https://example.com/sound.mp3" />
-        <meta property="og:audio:secure_url" content="https://secure.example.com/sound.mp3" />
-        <meta property="og:audio:type" content="audio/mpeg" />
-
-        <meta property="og:audio" content="https://example.com/bond/theme.mp3" />
-        <meta property="og:description" content="Sean Connery found fame and fortune as the suave, sophisticated British agent, James Bond." />
-        <meta property="og:determiner" content="the" />
-        <meta property="og:locale" content="en_GB" />
-        <meta property="og:locale:alternate" content="fr_FR" />
-        <meta property="og:locale:alternate" content="es_ES" />
-        <meta property="og:site_name" content="IMDb" />
-
-        <!--og: video example:-->
-
-        <meta property="og:video" content="https://example.com/bond/trailer.swf" />
-        <meta property="og:video" content="https://example.com/movie.swf" />
-        <meta property="og:video:secure_url" content="https://secure.example.com/movie.swf" />
-        <meta property="og:video:type" content="application/x-shockwave-flash" />
-        <meta property="og:video:width" content="400" />
-        <meta property="og:video:height" content="300" />
-
-        <!-- A full image example:-->
-
-        <meta property="og:image" content="https://example.com/ogp.jpg" />
-        <meta property="og:image:secure_url" content="https://secure.example.com/ogp.jpg" />
-        <meta property="og:image:type" content="image/jpeg" />
-        <meta property="og:image:width" content="400" />
-        <meta property="og:image:height" content="300" />
-        <meta property="og:image:alt" content="A shiny red apple with a bite taken out" />
-        <meta property="og:image" content="https://example.com/rock.jpg" />
-        <meta property="og:image:width" content="300" />
-        <meta property="og:image:height" content="300" />
-        <meta property="og:image" content="https://example.com/rock2.jpg" />
-        <meta property="og:image" content="https://example.com/rock3.jpg" />
-        <meta property="og:image:height" content="1000" />
-
-        <!-- Favicon-->
-
-        <!--<link rel="icon" href="images/favicon.ico">-->
-
+	    <link rel="icon" type="image/png" href="./weed.jpg">
+	    <link rel="icon" type="image/png" href="./flexy-logo.png">
+        <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+        <link rel=”stylesheet” href=”http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css” />
+        <!-- Font Awesome Icons -->
+        <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
+        <!-- Plugin CSS -->
+        <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
+	    <style>
+            body { width:500px; margin:auto;
+            }
+            header, nav, article, footer { display:block;
+            }
+            header { width:500px; background-color:#FF9966; text-align:center; margin:auto;
+            }
+            nav { float:left; width:25%; background-color: #FF9966; margin-bottom:10px;
+            }
+            article { float:right; width:70%; background-color:#FF9966; margin-bottom:10px;
+            }
+           footer { clear:both; background-color:#FF9966; text-align:center;
+            }
+            h2 { font-size:large; font-weight:bold; margin-top:0; margin-bottom:0;
+            }
+        </style>
+	    <!--Add conditional Javascript-->
+        <!-- Favicon-->	            
         <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
-        <!--<link rel="stylesheet" href="css/styles.css?v=1.0">-->
-
         <link rel="alternate" type="application/pdf" href="MainPage.pdf">
-        <link rel="author" href="mailto:internetearnings@live.com">
-        <link rel="author" type="text/html" href="https://orrisb.github.io">
+	    <link rel="author" href="mailto:bakerorris0@gmail.comcom">
+	    <link rel="author" type="text/html" href="https://orris0.github.io/">
         <!-- Bootstrap Icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
         <!-- SimpleLightbox plugin CSS-->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
-        <style>
-            p {
-                color: red;
-            }
-        </style>     
-        <!--
-        <link href="./vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
-        Theme CSS - Includes Bootstrap 
-        <link href="./CSS/creative.min.css" rel="stylesheet">-->
-        <link rel="stylesheet" href="./fonts/font-awesome.min.css">
-        <!--  -->
-        <link rel="icon" type="image/x-icon" href="../Bootstrap/dist/assets/img/HTMLBadge.ico">
-        <link rel="icon" type="image/x-icon" href="../Bootstrap/dist/assets/favicon.ico">
-
+        <!-- Core theme CSS (includes Bootstrap)-->                      
+	    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+        <script src=”js/jquery.mobile-1.0.1.min.js”></script>
+        <script type=”text/javascript” src=”assets/js/ui.js”></script>
+        <script type="text/javascript" src="js/jquery-1.7-min.js"></script>
+        <script type="text/javascript" src="js/script.js"></script>
+        <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
+        
         <!--Add conditional Javascript-->
         <!--[if lte IE 8]>
             <script src="js/html5.js" type="text/javascript"></script>
