--- a/starter-page.html
+++ b/starter-page.html
@@ -1,18 +1,8 @@
-<!doctype html>
-<!--Everything you write should be using markups -->
-<!-- head section is communicating about the page to the browser -->
-<!-- Anything you write under head is not displayed on the browser content page. -->
+<!DOCTYPE html>
 <html ng-app lang="en">
-<!-- All the Tags should be under <html> -->
-<!-- Describing about the page -->
-
-<head>
-    <!-- Required meta tags -->
-    <!-- Describing about the page -->
-    <!-- head section is communicating about the page to the browser -->
-    <!-- Anything you write under head is not displayed on the browser content page. -->
+    <head profile="http://www.w3.org/2005/10/profile">
     <title>Starter page</title>
-	       <meta charset=utf-8>
+	<meta charset=utf-8>
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
 	    <meta property="og:title" content="A Basic HTML5 Template">
