--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
       <!--  <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
          Viewport for responsive web design -->
 	    <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
-        <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="./js/scripts.js"></script>
+        <link rel="stylesheet" href="lightbox.css" type="text/css" media="screen" charset="utf-8">
+		
+		<script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+		<script type="text/javascript" src="./js/scripts.js"></script>
+		
         <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
 	    <link rel="stylesheet" href="./style.css"> 
