--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
          Viewport for responsive web design -->
 	    <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
         <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
-		<link rel="stylesheet" href="colorbox.css" type="text/css" media="screen" charset="utf-8">
+		<link rel="stylesheet" href="./CSS/colorbox.css" type="text/css" media="screen" charset="utf-8">
+        <link rel="stylesheet" href="jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8"/>	
+        <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8"/>
+
+
+
 		
 		<script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="jquery.Jcrop.min.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript" src="./js/scripts.js"></script>
 		
         <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
