--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
 		<link rel="stylesheet" href="./CSS/colorbox.css" type="text/css" media="screen" charset="utf-8">
         <link rel="stylesheet" href="jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8"/>	
-        <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8"/>
+		<link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8"/>
+        
 
 
 
