--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
 		<link rel="stylesheet" href="./CSS/colorbox.css" type="text/css" media="screen" charset="utf-8">
         <link rel="stylesheet" href="jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8"/>	
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8"/>
-        
-
-
-
-		
+        	
 		<script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="jquery.Jcrop.min.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript" src="./js/scripts.js"></script>
@@ -49,7 +45,7 @@
         <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
         <!-- Plugin CSS -->
         <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
-		<!--
+		
 	    <style>
             body { width:970px; margin:auto;
             }
@@ -65,8 +61,18 @@
             }
             h2 { font-size:large; font-weight:bold; margin-top:0; margin-bottom:0;
             }
+
+		    #fader {
+                position: relative;
+            }
+
+            #fader .to {
+                display: none;
+                position: absolute;
+            left: 0;
+            }
         </style>
-		-->
+	
 	    <!--Add conditional Javascript-->
         <!-- Favicon-->	            
         <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
