--- a/index.html
+++ b/index.html
@@ -187,36 +187,32 @@ td {
     <body>
         <div class="wrapper">
 			<div id="container">
-				 <header class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
-		            <img class="logo" src="img/flexy-logo.png">
+		        <img class="logo" src="img/flexy-logo.png">
+				<header class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
+				    <hgroup>  
+						<h1 class="veryimportant heading stuff" id="html5-ch1-7h1">StarTrackr!</h1>
+						<h2 class="heading"> Practical HTML5 Projects for fun and Profit!</h2>
+					</hgroup>
+				</header>
+            </div><!-- end-col-12 -->	
 			
-			        <!-- <header class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> --> 
+            <div class="data" id="html5-ch1-7content">
+                <div class="row">
                     <div class="col-12">
-				        <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">StarTrackr!</h1>
-                    </div><!-- end-col-12 -->	
-                </header>
-			
-                <div class="data" id="html5-ch1-7content">
-				
-                    <h2 class="heading"> Practical HTML5 Projects for fun and Profit!</h2>
-            
-                    <div class="row">
-                        <div class="col-12">
-                            <nav role="navigation" id="nav">
-                                <input class="trigger" type="checkbox" id="mainNavButton">
-                                <label for="mainNavButton" onclick>Menu</label>
-                                <ul>
-                                    <li><a href="./index.html">Home</a></li>
-                                    <li><a href="./about.html">About Us</a></li>
-                                    <li><a href="./membership.html">Membership</a></li>
-                                    <li><a href="./news.html">News</a></li>
-                                    <li><a href="./starter-page.html">Specials</a></li>
-						            <li><a href="./index[1].html">Blog</a></li>
-							        <li><a href="./index2.html">Products</a></li>
-                                </ul>
-                            </nav>
-                        </div><!-- col-12 -->
-                    </div><!-- end-.row -->
+                        <nav role="navigation" id="nav">
+                            <input class="trigger" type="checkbox" id="mainNavButton">
+                            <label for="mainNavButton" onclick>Menu</label>
+                            <ul>
+                                <li><a href="./index.html">Home</a></li>
+                                <li><a href="./about.html">About Us</a></li>
+                                <li><a href="./membership.html">Membership</a></li>
+                                <li><a href="./news.html">News</a></li>
+                                <li><a href="./starter-page.html">Specials</a></li>
+					            <li><a href="./index[1].html">Blog</a></li>
+						        <li><a href="./index2.html">Products</a></li>
+                            </ul>
+                        </nav>
+                    </div><!-- col-12 -->                    </div><!-- end-.row -->
                     <div class="row">
                          <div class="çol-12">
                             <img src="img/kite.png">
@@ -700,7 +696,7 @@ td {
                             <img id="plane-background" src="./img/plane-background.png" width="935px">
                         </div>
                     </div>
-                </div><!-- end content -->
+            </div><!-- end content -->
             <div class="row" style="background-color: #66d4ff">
                 <div class="col-12">
                     <h2 class="heading">Follow Us</h2>
