--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@ td {
 			</p>
       
       <span id="fader">
-        <img id="glenda" src="../../images/glenda_200.jpg" alt="Glendatronix"/>
-        <img class="to" src="../../images/fader_200.jpg" />
+        <img id="glenda" src="./css-jq/images/glenda_200.jpg" alt="Glendatronix"/>
+        <img class="to" src="./css-jq/images/fader_200.jpg" />
       </span>
 
       <div id="celebs">
@@ -251,42 +251,42 @@ td {
   				<tbody>
   					<tr>
   						<td>203A</td>
-  						<td>Johny Stardust (<a href="../../images/johnny_400.jpg" class="lightbox">pic</a>)</td>
+  						<td>Johny Stardust (<a href="./css-jq/images/johnny_400.jpg" class="lightbox">pic</a>)</td>
   						<td>Front-man</td>
   						<td>Los Angeles</td>
   						<td>$39.95</td>
   					</tr>
   					<tr>
   						<td>141B</td>
-  						<td>Beau Dandy (<a href="../../images/beau_400.jpg" class="lightbox">pic</a>)</td>
+  						<td>Beau Dandy (<a href="./css-jq/images/beau_400.jpg" class="lightbox">pic</a>)</td>
   						<td>Singer</td>
   						<td>New York</td>
   						<td>$39.95</td>
   					</tr>
   					<tr>
   						<td>2031</td>
-  						<td>Mo' Fat (<a href="../../images/mofat_400.jpg" class="lightbox">pic</a>)</td>
+  						<td>Mo' Fat (<a href="./css-jq/images/mofat_400.jpg" class="lightbox">pic</a>)</td>
   						<td>Producer</td>
   						<td>New York</td>
   						<td>$19.95</td>
   					</tr>
   					<tr>
   						<td>007F</td>
-  						<td>Kellie Kelly (<a href="../../images/kellie_400.jpg" class="lightbox">pic</a>)</td>
+  						<td>Kellie Kelly (<a href="./css-jq/images/kellie_400.jpg" class="lightbox">pic</a>)</td>
   						<td>Singer</td>
   						<td>Omaha</td>
   						<td>$11.95</td>
   					</tr>
   					<tr>
   						<td>8A05</td>
-  						<td>Darth Fader (<a href="../../images/fader_400.jpg" class="lightbox">pic</a>)</td>
+  						<td>Darth Fader (<a href="./css-jq/images/fader_400.jpg" class="lightbox">pic</a>)</td>
   						<td>DJ</td>
   						<td>London</td>
   						<td>$19.95</td>
   					</tr>
   					<tr>
   						<td>6636</td>
-  						<td>Glendatronix  (<a href="../../images/glenda_400.jpg" class="lightbox">pic</a>)</td>
+  						<td>Glendatronix  (<a href="./css-jq/images/glenda_400.jpg" class="lightbox">pic</a>)</td>
   						<td>Keytarist</td>
   						<td>London</td>
   						<td>$39.95</td>
