--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             }
             header { width:970px; background-color:#FF9966; text-align:center; margin:auto;
             }
-            nav { float:left; width:25%; background-color: #FF9966; margin-bottom:10px;
+            nav { float:left; width:100%; background-color: #FF9966;
             }
             article { float:right; width:70%; background-color:#FF9966; margin-bottom:10px;
             }
