--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	    <meta property="og:audio:type" content="audio/mpeg"> 
       <!--  <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
          Viewport for responsive web design -->
-	    <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
+	    <!-- <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8"> -->
         <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
 		<link rel="stylesheet" href="./CSS/colorbox.css" type="text/css" media="screen" charset="utf-8">
         <link rel="stylesheet" href="jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8"/>	
@@ -49,7 +49,7 @@
 	    <style>
             body { width:970px; margin:auto;
             }
-            header, nav, article, footer { display:block;
+            header, nav, article, footer { display:block; 
             }
             header { width:970px; background-color:#FF9966; text-align:center; margin:auto;
             }
