--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 	    <style>
             body { width:970px; margin:auto;
             }
+			div.wrapper { position: relative; top: 0em; left: 0; width: 100%; margin: auto; text-align: center; 
+            }
             header, nav, article, footer { display:block; 
             }
             header { width:970px; background-color:#FF9966; text-align:center; margin:auto;
