--- a/index.html
+++ b/index.html
@@ -45,22 +45,26 @@
         <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 		
 	    <style>
-            body { width:970px; margin:auto;}
-			div.wrapper { position: relative; top: 0em; left: 0; width: 100%; margin: auto; text-align: center;}
-            #container{ margin:0 auto; text-align: left; width: 970px;}
-			
+            body { width:970px; margin:auto;
+				}
+			div.wrapper { position: relative; top: 0em; left: 0; width: 100%; margin: auto; text-align: center;
+				}
+            #container{ margin:0 auto; text-align: left; width: 970px;
+				}
+			div#html5-ch1-7content.data { background-color: transparent; border-left: 10px white solid; border-right: 10px white solid; border-bottom: 10px white solid; width: 970px; margin-top: 0px; margin-left: auto; margin-right: auto; padding: 8px; font-size: medium; color: maroon;
+                }
             header, nav, article, footer { display:block; 
-            }
+                }
             header { width:970px; background-color:#FF9966; text-align:center; margin:auto;
-            }
+                }
             nav#nav { float:left; width:96.5%; background-color: #FF9966;
-            }
+                }
             article { float:right; width:70%; background-color:#FF9966; margin-bottom:10px;
-            }
+                }
            footer { clear:both; background-color:#FF9966; text-align:center;
-            }
+                }
             h2 { font-size:large; font-weight:bold; margin-top:0; margin-bottom:0;
-            }
+                }
 
 		    #fader {
                 position: relative;
