--- a/index.html
+++ b/index.html
@@ -4192,7 +4192,7 @@ li	{ margin: 5px; list-style-type:none;	}
 						<h2 class="heading"> Practical HTML5 Projects for fun and Profit!</h2>
 					</hgroup>
 				</header>
-            </div><!-- end-col-12 -->	
+            <!-- </div><!-- end-col-12 -->	
 			
             <div class="data" id="html5-ch1-7content">
                 <div class="row">
@@ -4210,9 +4210,9 @@ li	{ margin: 5px; list-style-type:none;	}
 						        <li><a href="./index2.html">Products</a></li>
                             </ul>
                         </nav>
-						<h2>
-				Welcome!
-			</h2>
+					</div><!-- end-col-12 -->
+                </div><!-- end-row -->
+				<h2>Welcome!</h2>
 						<!--
 				<ul id="navigation">
 					<li><a href="#">Home</a></li>
@@ -4765,7 +4765,9 @@ li	{ margin: 5px; list-style-type:none;	}
             <script src="../orris0/main.js"></script>
 			<a href="https://orris0.github.io/orris0/membership.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
                  
-			</div><!-- end-container -->    
+			        </div><!-- end-container -->
+				</div><!-- end-content -->
+			</div><!-- end-container -->
 		</div><!-- end wrapper -->
     </body><!-- end body  -->   
 </html>
