--- a/index.html
+++ b/index.html
@@ -4568,7 +4568,7 @@ width="220"></p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
                         </ul>
                     </nav>
                 </div><!-- col-12 -->
-            </div><!-- end-.row -->
+            </div><!-- end-.row --
 
             <div class="row">
                 <div class="çol-12">
