--- a/index.html
+++ b/index.html
@@ -4580,7 +4580,9 @@ width="220"></p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
                 <div class="col-12" style="padding: 2%;">
                     <div id="banner">
                         <div id="banner-wrapper">
-                            <h2 class="dark" id="html5-ch1-7h2">Practical HTML5 Projects for fun and Profit!</h2> 
+                            <!-- <h2 class="dark" id="html5-ch1-7h2"> --> <p id="no-script">
+                                We recommend that you have JavaScript enabled!
+                            </p></h2> 
                         </div>
 					</div>
 				</div>
