--- a/index.html
+++ b/index.html
@@ -87,6 +87,18 @@ nav a.active:hover { background: #cfecf5; color: navy;
 position:relative; top:-13px; text-align: left; background: #cfecf5; 
 padding: 20px; border: 1px solid black; border-top: none; z-index: 2;
 }
+			.box {
+  position: absolute; 
+  width: 50px;
+  height: 50px;
+}
+#green {
+  background-color: green;
+}
+#red {
+  background-color: red;
+  top: 60px;
+}
 
 
 			
