--- a/index.html
+++ b/index.html
@@ -4532,11 +4532,11 @@ width="220"></p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
             </div>
 			<h2>Celebrity Photos</h2>
             <div id="photos">
-                <img alt="Glendatronix" class="show" src="../../images/glenda_200.jpg" />
-                <img alt="Darth Fader" src="../../images/fader_200.jpg" />
-                <img alt="Beau Dandy" src="../../images/beau_200.jpg" />
-                <img alt="Johnny Stardust" src="../../images/johnny_200.jpg" />
-                <img alt="Mo' Fat" src="../../images/mofat_200.jpg" />
+                <img alt="Glendatronix" class="show" src="./images/glenda_200.jpg" />
+                <img alt="Darth Fader" src="./images/fader_200.jpg" />
+                <img alt="Beau Dandy" src="./images/beau_200.jpg" />
+                <img alt="Johnny Stardust" src="./images/johnny_200.jpg" />
+                <img alt="Mo' Fat" src="./images/mofat_200.jpg" />
             </div>
             <div id="celebs">
                 <h2 class="heading">Our Celebrities</h2>
