--- a/index.html
+++ b/index.html
@@ -99,7 +99,13 @@ padding: 20px; border: 1px solid black; border-top: none; z-index: 2;
   background-color: red;
   top: 60px;
 }
+#photos img {
+  display: none;
+}
 
+#photos .show {
+  display: inline;
+}
 
 			
             body { width:970px; margin:auto;
