--- a/index.html
+++ b/index.html
@@ -106,7 +106,15 @@ padding: 20px; border: 1px solid black; border-top: none; z-index: 2;
 #photos .show {
   display: inline;
 }
+#photos img {
+  position: absolute;
+}
 
+#photos {
+  width: 180px;
+  height: 200px;
+  overflow: hidden;
+}
 			
             body { width:970px; margin:auto;
 				}
