--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
 		<link rel="stylesheet" href="./CSS/colorbox.css" type="text/css" media="screen" charset="utf-8">
         <link rel="stylesheet" href="jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8"/>	   	
+		
+		
+		<script src="jquery.innerfade.js" type="text/javascript" ></script>
 		<script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="jquery.Jcrop.min.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript" src="./js/scripts.js"></script>
