--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             }
             header {margin-top:0; height:156px; width:100%; 
             background-image:url('images/bluepan.jpg'); background-repeat:no-repeat; 
-            background-position:center; border-bottom:0;
-}
+            background-position:center; border-bottom:0
+			}
             h1 {font-family:Arial; font-size:320%; color:white; font-weight:normal; 
             text-align:center; padding-top:35px; margin-bottom:-10px; height: 94px; margin:auto;
             }
@@ -71,66 +71,51 @@
             nav li { display: inline; overflow: hidden; list-style-type: none;
             }
             /*set tab colour*/
-nav a, a.active { color: navy; background: #81d9f6; font: bold 1em Arial; 
-border: 1px solid black; padding: 2px 5px 0px 5px; margin: 0; text-decoration: none;
-}
-/*make a 3px wide bottom border on tab the same colour as the page*/
-nav a.active { background: #cfecf5; color:navy; border-bottom: 3px solid #cfecf5;
-}
-/*hovering over a non-active tab shows an aqua tab*/
-nav a:hover { background: aqua;
-}
-nav a:visited { color: navy;
-}
-/*hovering over the active tab shows navy text*/
-nav a.active:hover { background: #cfecf5; color: navy;
-}
-/*set the position of the content to move it close up to the menu tabs*/
-#content {margin-top:0; font : 0.9em/1.3em "bitstream vera sans", verdana; 
-position:relative; top:-13px; text-align: left; background: #cfecf5; 
-padding: 20px; border: 1px solid black; border-top: none; z-index: 2;
-}
-			.box {
-  position: absolute; 
-  width: 50px;
-  height: 50px;
-}
-#green {
-  background-color: green;
-}
-#red {
-  background-color: red;
-  top: 60px;
-}
-#photos img {
-  display: none;
-}
-
-#photos .show {
-  display: inline;
-}
-#photos img {
-  position: absolute;
-}
-
-#photos {
-  width: 180px;
-  height: 200px;
-  overflow: hidden;
-}
-			
+            nav a, a.active { color: navy; background: #81d9f6; font: bold 1em Arial; 
+            border: 1px solid black; padding: 2px 5px 0px 5px; margin: 0; text-decoration: none;
+            }
+            /*make a 3px wide bottom border on tab the same colour as the page*/
+            nav a.active { background: #cfecf5; color:navy; border-bottom: 3px solid #cfecf5;
+            }
+            /*hovering over a non-active tab shows an aqua tab*/
+            nav a:hover { background: aqua;
+            }
+            nav a:visited { color: navy;
+            }
+            /*hovering over the active tab shows navy text*/
+            nav a.active:hover { background: #cfecf5; color: navy;
+            }
+            /*set the position of the content to move it close up to the menu tabs*/
+            #content {margin-top:0; font : 0.9em/1.3em "bitstream vera sans", verdana; 
+            position:relative; top:-13px; text-align: left; background: #cfecf5; 
+            padding: 20px; border: 1px solid black; border-top: none; z-index: 2;
+            }
+			.box { position: absolute;  width: 50px; height: 50px;
+            }
+            #green {
+            background-color: green;
+            }
+            #red {
+            background-color: red;
+            top: 60px;
+            }
+            #photos img { display: none;
+            }
+            #photos .show { display: inline;
+            }
+            #photos img {
+            position: absolute;
+            }
+            #photos { width: 180px; height: 200px; overflow: hidden;
+            }
             body { width:970px; margin:auto;
-				}
+			}
 			div.wrapper { position: relative; top: 0em; left: 0; width: 100%; margin: auto; text-align: center;
-				}
+			}
             #container{ margin:0 auto; text-align: left;
-				}
+			}
 			div#html5-ch1-7content.data { background-color: transparent; border-left: 10px white solid; border-right: 10px white solid; border-bottom: 10px white solid; width: 970px; margin-top: 0px; margin-left: auto; margin-right: auto; padding: 8px; font-size: medium; color: maroon;
-                }
-
-
-
-			
+            }	
             header, nav, article, footer { display:block; 
                 }
             header { width:970px; background-color:#FF9966; text-align:center; margin:auto;
@@ -143,31 +128,21 @@ padding: 20px; border: 1px solid black; border-top: none; z-index: 2;
                 }
             h2 { font-size:large; font-weight:bold; margin-top:0; margin-bottom:0;
                 }
-
-		    #fader {
-                position: relative;
+		    #fader { position: relative;
             }
-
-            #fader .to {
-                display: none;
-                position: absolute;
-            left: 0;
+            #fader .to { display: none; position: absolute; left: 0;
             }
-
-			#navigation{
-	float: right;
-	width: 150px;
-}
-p#intro{
-	width:970px;
-}
-
-body {
-	font-family: "Lucida Sans Unicode","Lucida Grande",Sans-Serif;
-	color: #3E3E3E;
-	background: #94C5EB url(../images/background-grad.png) repeat-x;
-	font-size: 12px;
-}
+			#navigation { float: right; width: 150px;
+            }
+            p#intro {
+	            width:970px;
+            }
+            body {
+	        font-family: "Lucida Sans Unicode","Lucida Grande",Sans-Serif;
+	        color: #3E3E3E;
+	        background: #94C5EB url(../images/background-grad.png) repeat-x;
+	        font-size: 12px;
+            }
 
 p {
 	padding: 5px;
