--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 			}
 			div.wrapper { position: relative; top: 0em; left: 0; width: 100%; margin: auto; text-align: center;
 			}
-            #container{ margin:0 auto; text-align: left;
+            #container{ margin:0 auto; text-align: center;
 			}
 			div#html5-ch1-7content.data { background-color: transparent; border-left: 10px white solid; border-right: 10px white solid; border-bottom: 10px white solid; width: 970px; margin-top: 0px; margin-left: auto; margin-right: auto; padding: 8px; font-size: medium; color: maroon;
             }	
@@ -143,15 +143,11 @@
 	        background: #94C5EB url(../images/background-grad.png) repeat-x;
 	        font-size: 12px;
             }
-
-p {
-	padding: 5px;
-}
-
-a {
-	color: #3687AF;
-}
-/*
+            p { padding: 5px;
+            } 
+            a {	color: #3687AF;
+            }
+            /*
 #container{
 	margin:0 auto;
 	text-align: left;
