--- a/index.html
+++ b/index.html
@@ -50,41 +50,38 @@
 	    <style>
 			/* Set styles to equalise browser rendition*/
             html, body, h1, h2, h3, h4, h5, h6, p, ol, ul, li { padding: 0; margin: 0;
-            }
+                }
             header, footer, section, article, nav { display:block;
-            }
+                }
             body {text-align:center; margin: 20px; background: #bee8ff; font: medium arial;
-            }
+                }
             #container {width:960px; margin:-10px auto 0 auto;
-            }
-            header {margin-top:0; height:156px; width:100%; 
-            background-image:url('images/bluepan.jpg'); background-repeat:no-repeat; 
-            background-position:center; border-bottom:0
-			}
-            h1 {font-family:Arial; font-size:320%; color:white; font-weight:normal; 
-            text-align:center; padding-top:35px; margin-bottom:-10px; height: 94px; margin:auto;
+                }
+            header { margin-top:0; height:156px; width:100%;  background-image:url('images/bluepan.jpg'); background-repeat:no-repeat; background-position:center; border-bottom:0
+			    }
+            h1 {font-family:Arial; font-size:320%; color:white; font-weight:normal;  text-align:center; padding-top:35px; margin-bottom:-10px; height: 94px; margin:auto;
             }
             /*set the generic tab style--and move menu upwards so that it overlaps the header*/
-            nav {position:relative; top:-13px; color: navy; border-bottom: 1px solid black; 
-            margin: -25px 0 0 0; padding: 0px; padding-left: 10px z-index: 1; }
+            nav {position:relative; top:-13px; color: navy; border-bottom: 1px solid black;  margin: -25px 0 0 0; padding: 0px; padding-left: 10px z-index: 1;
+				}
             /* use display:inline to remove IE6 double margin bug*/
             nav li { display: inline; overflow: hidden; list-style-type: none;
-            }
+                }
             /*set tab colour*/
             nav a, a.active { color: navy; background: #81d9f6; font: bold 1em Arial; 
             border: 1px solid black; padding: 2px 5px 0px 5px; margin: 0; text-decoration: none;
-            }
+                }
             /*make a 3px wide bottom border on tab the same colour as the page*/
             nav a.active { background: #cfecf5; color:navy; border-bottom: 3px solid #cfecf5;
-            }
+                }
             /*hovering over a non-active tab shows an aqua tab*/
             nav a:hover { background: aqua;
-            }
+                }
             nav a:visited { color: navy;
-            }
+                }
             /*hovering over the active tab shows navy text*/
             nav a.active:hover { background: #cfecf5; color: navy;
-            }
+                }
             /*set the position of the content to move it close up to the menu tabs*/
             #content {margin-top:0; font : 0.9em/1.3em "bitstream vera sans", verdana; 
             position:relative; top:-13px; text-align: left; background: #cfecf5; 
@@ -92,28 +89,24 @@
             }
 			.box { position: absolute;  width: 50px; height: 50px;
             }
-            #green {
-            background-color: green;
-            }
-            #red {
-            background-color: red;
-            top: 60px;
-            }
+            #green { background-color: green;
+                }
+            #red {  background-color: red; top: 60px;
+                }
             #photos img { display: none;
-            }
+                }
             #photos .show { display: inline;
-            }
-            #photos img {
-            position: absolute;
-            }
+                }
+            #photos img { position: absolute;
+                }
             #photos { width: 180px; height: 200px; overflow: hidden;
-            }
+                }
             body { width:970px; margin:auto;
-			}
+			    }
 			div.wrapper { position: relative; top: 0em; left: 0; width: 100%; margin: auto; text-align: center;
-			}
+			    }
             #container{ margin:0 auto; text-align: center;
-			}
+			    }
 			div#html5-ch1-7content.data { background-color: transparent; border-left: 10px white solid; border-right: 10px white solid; border-bottom: 10px white solid; width: 970px; margin-top: 0px; margin-left: auto; margin-right: auto; padding: 8px; font-size: medium; color: maroon;
             }	
             header, nav, article, footer { display:block; 
@@ -129,94 +122,40 @@
             h2 { font-size:large; font-weight:bold; margin-top:0; margin-bottom:0;
                 }
 		    #fader { position: relative;
-            }
+                }
             #fader .to { display: none; position: absolute; left: 0;
-            }
+                }
 			#navigation { float: right; width: 150px;
-            }
+                }
             p#intro {
 	            width:970px;
-            }
-            body {
-	        font-family: "Lucida Sans Unicode","Lucida Grande",Sans-Serif;
-	        color: #3E3E3E;
-	        background: #94C5EB url(../images/background-grad.png) repeat-x;
-	        font-size: 12px;
-            }
+                 }
+            body { font-family: "Lucida Sans Unicode","Lucida Grande",Sans-Serif; color: #3E3E3E; background: #94C5EB url(../images/background-grad.png) repeat-x; font-size: 12px;
+                }
             p { padding: 5px;
-            } 
+                } 
             a {	color: #3687AF;
-            }
-            /*
-#container{
-	margin:0 auto;
-	text-align: left;
-	width: 970px;
-}
-*/
-#header{
-	height: 60px;
-	color: #172322;
-	background: transparent url(../images/header-corners.png) no-repeat bottom left;
-}
-
-#header h1
-{
-	padding:0;
-	margin:0;
-}
-
-#content{
-	background-color: #fff;
-	padding: 0 15px 10px 15px;
-
-} 
-
-#footer{
-	background-color: #fff;
-	padding:15px;
-  clear: both;
-}
-
-h2 {
-	border-bottom:2px solid #015287;
-	color: #D15600;
-	padding-top: 10px;
-  margin-top: 0;
-}
-
-table {
-	border-collapse:collapse;
-	font-size:12px;
-	margin:0 20px 20px 20px;
-	border-top:2px solid #015287;
-	width:480px;
-}
-
-th {
-	border-bottom: 2px solid #015287;
-	color: #D15600;
-	font-size: 14px;
-	font-weight: normal;
-	text-align: left;
-	padding: 3px 8px;
-}
-
-td {
-	padding: 6px;
-}
-
-		ion*/
-html, h1, h2, h3, h4, h5, p, ol, ul, li { padding: 0; margin: 0;
-}
-
-#photos {
-  border: 1px solid #BEBEBE;
-  height: 400px;
-  overflow: hidden;
-  position: relative;
-  width: 400px;
-}
+                }
+            #container{ margin:0 auto; text-align: left; width: 970px;
+                }
+            #header{ height: 60px; color: #172322; background: transparent url(./images/header-corners.png) no-repeat bottom left;
+                }
+			#header h1 { padding:0; margin:0;
+                }
+            #content{ background-color: #fff; padding: 0 15px 10px 15px;
+                } 
+            #footer{ background-color: #fff; padding:15px; clear: both;
+                }
+            h2 { border-bottom:2px solid #015287; color: #D15600; padding-top: 10px; margin-top: 0;
+                }
+            table { border-collapse:collapse; font-size:12px; margin:0 20px 20px 20px;border-top:2px solid #015287; width:480px;
+                }
+            th { border-bottom: 2px solid #015287; color: #D15600; font-size: 14px; font-weight: normal; text-align: left;padding: 3px 8px;
+			    }
+            td { padding: 6px;
+			    }
+            #photos { border: 1px solid #BEBEBE; height: 400px; overflow: hidden; position: relative; width: 400px;
+                }
 
 #photos ul {
   left: 0;
