--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
 		<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
         <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
-	    <!-- <link rel="stylesheet" href="./style.css">
+		<script src="jquery.innerfade.js" type="text/javascript" ></script>
+	    <script src="jquery.cycle.all.min.js" type="text/javascript" ></script>
+		
+		<!-- <link rel="stylesheet" href="./style.css">
         <link rel="stylesheet" href="./style[1].css">  -->
         
 	    <link rel="stylesheet" href="./nav[1].css">
