--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
         <!--  <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
          Viewport for responsive web design -->
 	    <!-- <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8"> -->
+		<link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8">
+		<!--     01_lightbox -->
         <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
 		<link rel="stylesheet" href="./CSS/colorbox.css" type="text/css" media="screen" charset="utf-8">
-        <link rel="stylesheet" href="jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8"/>	   	
+        <link rel="stylesheet" href="jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8">	   	
 		
 		
 		<script src="jquery.innerfade.js" type="text/javascript" ></script>
