--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		
 		
 		<script src="jquery.innerfade.js" type="text/javascript" ></script>
+		<script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="jquery.Jcrop.min.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript" src="./js/scripts.js"></script>
